[gd_scene load_steps=5 format=3 uid="uid://6uc35sikpbpq"]

[ext_resource type="Script" uid="uid://dv4jmn570rgqk" path="res://Scripts/burning_trail.gd" id="1_ebwgu"]
[ext_resource type="PackedScene" uid="uid://d3erdmulqy1l2" path="res://Assets/Particles/major_damage.tscn" id="1_k1lmb"]
[ext_resource type="PackedScene" uid="uid://b70y8labc000a" path="res://Assets/Particles/major_damage_line_sparks.tscn" id="2_1eytn"]
[ext_resource type="PackedScene" uid="uid://dk37kibucmpd0" path="res://Assets/Particles/mild_damage.tscn" id="3_1gxec"]

[node name="BurningTrail" type="Node3D"]
script = ExtResource("1_ebwgu")

[node name="MajorDamage" parent="." instance=ExtResource("1_k1lmb")]

[node name="MajorDamageLineSparks" parent="." instance=ExtResource("2_1eytn")]

[node name="MildDamage" parent="." instance=ExtResource("3_1gxec")]
